Dataframe: New DataframeToMesh, updates to the point renderer

--- a/modules/basegl/CMakeLists.txt
+++ b/modules/basegl/CMakeLists.txt
@@ -310,6 +310,7 @@ set(SHADER_FILES
     glsl/meshrendering.vert
     glsl/multichannelraycaster.frag
     glsl/pointrenderer.frag
+    glsl/pointrenderer.geom
     glsl/pointrenderer.vert
     glsl/raycasting/raycaster-template.frag
     glsl/raycasting/iso.glsl
