BaseGL/Plotting: more blending

--- a/modules/opengl/CMakeLists.txt
+++ b/modules/opengl/CMakeLists.txt
@@ -127,6 +127,7 @@ set(SHADER_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/standard.vert
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/texturedgeometryrendering.frag
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/texturedgeometryrendering.vert
+    ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/blend.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/classification.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/colorconversion.glsl
     ${CMAKE_CURRENT_SOURCE_DIR}/glsl/utils/compositing.glsl
