BaseGL/PlottingGL: added regression tests, rendering fixes.

--- a/modules/dataframe/CMakeLists.txt
+++ b/modules/dataframe/CMakeLists.txt
@@ -26,6 +26,7 @@ set(HEADER_FILES
     include/inviwo/dataframe/processors/dataframetovector.h
     include/inviwo/dataframe/processors/imagetodataframe.h
     include/inviwo/dataframe/processors/syntheticdataframe.h
+    include/inviwo/dataframe/processors/tffromdataframecolumn.h
     include/inviwo/dataframe/processors/volumesequencetodataframe.h
     include/inviwo/dataframe/processors/volumetodataframe.h
     include/inviwo/dataframe/properties/colormapproperty.h
@@ -64,6 +65,7 @@ set(SOURCE_FILES
     src/processors/dataframetovector.cpp
     src/processors/imagetodataframe.cpp
     src/processors/syntheticdataframe.cpp
+    src/processors/tffromdataframecolumn.cpp
     src/processors/volumesequencetodataframe.cpp
     src/processors/volumetodataframe.cpp
     src/properties/colormapproperty.cpp
