DataFrame: Added a file listing to dataframe processor

--- a/modules/dataframe/CMakeLists.txt
+++ b/modules/dataframe/CMakeLists.txt
@@ -24,6 +24,7 @@ set(HEADER_FILES
     include/inviwo/dataframe/processors/dataframetobuffer.h
     include/inviwo/dataframe/processors/dataframetomesh.h
     include/inviwo/dataframe/processors/dataframetovector.h
+    include/inviwo/dataframe/processors/filelist.h
     include/inviwo/dataframe/processors/imagetodataframe.h
     include/inviwo/dataframe/processors/syntheticdataframe.h
     include/inviwo/dataframe/processors/tffromdataframecolumn.h
@@ -63,6 +64,7 @@ set(SOURCE_FILES
     src/processors/dataframetobuffer.cpp
     src/processors/dataframetomesh.cpp
     src/processors/dataframetovector.cpp
+    src/processors/filelist.cpp
     src/processors/imagetodataframe.cpp
     src/processors/syntheticdataframe.cpp
     src/processors/tffromdataframecolumn.cpp
