DataFrameQt: DataFrameDockTable procesor for a dockable widget

--- a/modules/dataframeqt/CMakeLists.txt
+++ b/modules/dataframeqt/CMakeLists.txt
@@ -18,6 +18,7 @@ set(HEADER_FILES
     include/inviwo/dataframeqt/dataframeqtmodule.h
     include/inviwo/dataframeqt/dataframeqtmoduledefine.h
     include/inviwo/dataframeqt/datavisualizer/dataframetablevisualizer.h
+    include/inviwo/dataframeqt/processors/dataframedocktable.h
     include/inviwo/dataframeqt/processors/dataframetable.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
@@ -30,6 +31,7 @@ set(SOURCE_FILES
     src/dataframetableprocessorwidget.cpp
     src/dataframetableview.cpp
     src/datavisualizer/dataframetablevisualizer.cpp
+    src/processors/dataframedocktable.cpp
     src/processors/dataframetable.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
