--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -149,6 +149,7 @@ set(HEADER_FILES
     include/modules/base/properties/meshinformationproperty.h
     include/modules/base/properties/sequencetimerproperty.h
     include/modules/base/properties/transformlistproperty.h
+    include/modules/base/properties/valueaxisproperty.h
     include/modules/base/properties/volumeinformationproperty.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
@@ -294,6 +295,7 @@ set(SOURCE_FILES
     src/properties/meshinformationproperty.cpp
     src/properties/sequencetimerproperty.cpp
     src/properties/transformlistproperty.cpp
+    src/properties/valueaxisproperty.cpp
     src/properties/volumeinformationproperty.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
